# bucketlist_cli

./: Cargo.toml  README.md
src/: app.rs  main.rs
