[package]
name = "bucketlist_cli"
description = "Bucket List CLI"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bl"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
dirs = "4.0"
env_logger = "0.9"
indexmap = { version = "1.8", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
