[package]
name = "bucketlist_cli"
description = "Bucket List CLI"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bl"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
dirs = "4.0.0"
log = "0.4.14"
env_logger = "0.9.0"
indexmap = { version = "1.8.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
main_error = "0.1.2"
